--- a/.env
+++ b/.env
@@ -1,17 +1,20 @@
 # .env ファイルのテンプレート
+# このファイルは公開リポジトリにアップロードしないでください（.gitignoreに追記を推奨）
 
-# --- X (旧Twitter) API認証情報 ---
-# X Developer Portalで取得したBearer Tokenを設定します
+# --- X (旧Twitter) API 認証情報 ---
+# BOTの読み取り専用操作に必須のトークンです。
+# API Key (client_id) や API Key Secret (client_secret) は、
+# Bearer Tokenを生成済みであれば、このBOTの実行には不要です。
 TWITTER_BEARER_TOKEN="YOUR_TWITTER_BEARER_TOKEN_HERE"
 
-# --- Telegram BOT認証情報 ---
-# TelegramのBotFatherで取得したBOTトークンを設定します
+# --- Telegram BOT 認証情報 ---
+# TelegramのBotFatherで取得したBOTトークン
 TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN_HERE"
 
-# 通知を受け取るTelegramチャットのIDを設定します
+# 通知を受け取るTelegramチャットのID
 TELEGRAM_CHAT_ID="YOUR_TELEGRAM_CHAT_ID_HERE"
 
 # --- データベース接続情報 ---
-# Render PostgreSQLの「Internal Connection String」を設定します
+# Render PostgreSQLの「Internal Connection String」を設定します。
 # 例: postgresql://user:pass@host:port/dbname
 DATABASE_URL="YOUR_RENDER_POSTGRESQL_DATABASE_URL_HERE"
