--- a/.env
+++ b/.env
@@ -1,20 +1,28 @@
-# .env ファイルのテンプレート
-# このファイルは公開リポジトリにアップロードしないでください（.gitignoreに追記を推奨）
+# =======================================================
+# Render Webサービス用 BTC/USDT 機械学習 BOT 環境変数
+# =======================================================
 
-# --- X (旧Twitter) API 認証情報 ---
-# BOTの読み取り専用操作に必須のトークンです。
-# API Key (client_id) や API Key Secret (client_secret) は、
-# Bearer Tokenを生成済みであれば、このBOTの実行には不要です。
-TWITTER_BEARER_TOKEN="YOUR_TWITTER_BEARER_TOKEN_HERE"
+# --- 必須設定: Render Web Service (Flask) ---
+# Flaskアプリケーションがリッスンするポート
+PORT=8080
 
-# --- Telegram BOT 認証情報 ---
-# TelegramのBotFatherで取得したBOTトークン
+# --- 必須設定: MEXC API認証情報 ---
+# MEXCの先物取引APIキー
+MEXC_API_KEY="YOUR_MEXC_API_KEY_HERE"
+
+# MEXCのAPIシークレットキー
+MEXC_SECRET="YOUR_MEXC_SECRET_HERE"
+
+# --- 必須設定: Telegram 通知 ---
+# Telegram Botから取得したトークン
 TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN_HERE"
 
-# 通知を受け取るTelegramチャットのID
+# 通知を送信したいチャットのID (数字または -で始まるID)
 TELEGRAM_CHAT_ID="YOUR_TELEGRAM_CHAT_ID_HERE"
 
-# --- データベース接続情報 ---
-# Render PostgreSQLの「Internal Connection String」を設定します。
-# 例: postgresql://user:pass@host:port/dbname
-DATABASE_URL="YOUR_RENDER_POSTGRESQL_DATABASE_URL_HERE"
+# --- オプション設定: BOTの動作パラメータ ---
+# モデルの再学習間隔 (時間単位, 例: 24時間ごと)
+RETRAIN_INTERVAL_HOURS=24
+
+# 予測・通知間隔 (時間単位, 例: 1時間ごと)
+PREDICTION_INTERVAL_HOURS=1
